<?xml version="1.0"?>
<package format="2">
  <name>o2as_fastener_gripper</name>
  <version>1.0.0</version>
  <description>The o2as_fastener_gripper package</description>

  <maintainer email="kowa.yasushi@gmail.com">arayasu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
