<?xml version="1.0"?>
<package>
  <name>o2as_msgs</name>
  <version>1.0.0</version>
  <description>Some ROS messages to communicate inside the O2AS project</description>
  <author email="fvdrigalski@gmail.com">Felix v. Drigalski</author>
  <maintainer email="fvdrigalski@gmail.com">Felix v. Drigalski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
