<?xml version="1.0"?>
<package format="2">
	<name>o2as_realsense_camera</name>
	<version>0.0.0</version>
	<description>The o2as_realsense_camera package</description>
	<maintainer email="yoshiya_shibata@omron.co.jp">Yoshiya Shibata</maintainer>
	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>std_srvs</depend>
	<depend>pcl</depend>
	<depend>pcl_conversions</depend>
	<depend>librealsense2</depend>
	<depend version_gte="3.3.0">opencv3</depend>
	<depend>cv_bridge</depend>
	<depend>sensor_msgs</depend>
	<depend>image_transport</depend>
	<depend>tf2_ros</depend>

	<export>
	</export>
</package>
