<?xml version="1.0"?>
<package format="2">
  <name>o2as_vision</name>
  <version>0.0.0</version>
  <description>The o2as_vision package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="FvDrigalski@gmail.com">Felix von Drigalski</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/o2as_usb_relay</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <!-- for get image from camera device -->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- for get image from camera device -->
  <build_depend>o2as_realsense_camera</build_depend>
  <exec_depend>o2as_realsense_camera</exec_depend>
  <build_depend>phoxi_camera</build_depend>
  <exec_depend>phoxi_camera</exec_depend>

  <!-- for object detection by cad matching -->
  <build_depend>o2as_cad_matching_msgs</build_depend>
  <exec_depend>o2as_cad_matching_msgs</exec_depend>
	<exec_depend>o2as_cad_matching</exec_depend>

  <!-- for detected add object to planning scene -->
  <build_depend>shape_msgs</build_depend>
  <exec_depend>shape_msgs</exec_depend>
  <build_depend>geometric_shapes</build_depend>
  <exec_depend>geometric_shapes</exec_depend>

  <!-- What is this for? -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>phoxi_camera</build_export_depend>  
  <!-- <build_export_depend>o2as_realsense_camera</build_export_depend> -->
  <!-- <build_export_depend>o2as_cad_matching</build_export_depend> -->
  <build_export_depend>rospy</build_export_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
